syntax = "proto3";

option go_package = "neoown/proto";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
    rpc GetIp(GetIpRequest) returns (GetIpReply) {}
}

message HelloRequest {
    string Name = 1;
}

message HelloReply {
    string message = 1;
}

message GetIpRequest {
}

message GetIpReply {
    string ip = 1;
}